ADD: ng-password-validator library added to angular project

--- a/ngx-password-validator/tsconfig.json
+++ b/ngx-password-validator/tsconfig.json
@@ -14,7 +14,13 @@
     "lib": [
       "es2018",
       "dom"
-    ]
+    ],
+    "paths": {
+      "ng-password-validator": [
+        "dist/ng-password-validator/ng-password-validator",
+        "dist/ng-password-validator"
+      ]
+    }
   },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
