--- a/ngx-password-validator/angular.json
+++ b/ngx-password-validator/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "ngx-password-validator": {
@@ -123,6 +123,50 @@
           }
         }
       }
-    }},
-  "defaultProject": "ngx-password-validator"
+    },
+    "ng-password-validator": {
+      "projectType": "library",
+      "root": "projects/ng-password-validator",
+      "sourceRoot": "projects/ng-password-validator/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "projects/ng-password-validator/tsconfig.lib.json",
+            "project": "projects/ng-password-validator/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/ng-password-validator/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "main": "projects/ng-password-validator/src/test.ts",
+            "tsConfig": "projects/ng-password-validator/tsconfig.spec.json",
+            "karmaConfig": "projects/ng-password-validator/karma.conf.js"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "projects/ng-password-validator/tsconfig.lib.json",
+              "projects/ng-password-validator/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**"
+            ]
+          }
+        }
+      }
+    }
+  },
+  "defaultProject": "ngx-password-validator",
+  "cli": {
+    "analytics": false
+  }
 }
