--- a/ngx-password-validator/projects/ng-password-validator/package.json
+++ b/ngx-password-validator/projects/ng-password-validator/package.json
@@ -1,9 +1,23 @@
 {
-  "name": "ng-password-validator",
-  "version": "0.0.1",
-  "peerDependencies": {
-    "@angular/common": "^9.0.7",
-    "@angular/core": "^9.0.7",
-    "tslib": "^1.10.0"
-  }
+    "name": "ng-password-validator",
+    "version": "0.0.2",
+    "description": "The password validator is a pop-up window that appears when you start typing in input box. Here you can configure the password acceptance criteria, once your enter characters fullfil the requirement you will get a success message.",
+    "author": "Jagan Mohan Bishoyi",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/jaganbishoyi/ngx-password-validator.git"
+    },
+    "keywords": [
+        "Angular 2",
+        "Angular password validator",
+        "Password validator",
+        "Angular 2+ password validator"
+    ],
+    "homepage": "https://github.com/monatheoctocat/my_package",
+    "peerDependencies": {
+        "@angular/common": "^9.0.7",
+        "@angular/core": "^9.0.7",
+        "tslib": "^1.10.0"
+    }
 }
