--- a/ngx-password-validator/package.json
+++ b/ngx-password-validator/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-password-validator",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -10,7 +10,8 @@
         "e2e": "ng e2e",
         "build_lib": "ng build ng-password-validator --prod",
         "npm_pack": "cd dist/ng-password-validator && npm pack",
-        "package": "npm run build_lib --prod && npm run npm_pack"
+        "package": "npm run build_lib --prod && npm run npm_pack",
+        "publish": "npm run package && cd dist/ng-password-validator/ && npm publish"
     },
     "private": true,
     "dependencies": {
