--- a/ngx-password-validator/projects/ng-password-validator/package.json
+++ b/ngx-password-validator/projects/ng-password-validator/package.json
@@ -15,7 +15,7 @@
         "Password validator",
         "Angular 2+ password validator"
     ],
-    "homepage": "https://github.com/jaganbishoyi/ngx-password-validator/tree/feature/ngx-password-validator/projects/ng-password-validator",
+    "homepage": "https://jaganbishoyi.github.io/ngx-password-validator/",
     "peerDependencies": {
         "@angular/common": "^9.0.7",
         "@angular/core": "^9.0.7",
