--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-password-validator",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -23,7 +23,8 @@
         "@angular/platform-browser": "~9.0.6",
         "@angular/platform-browser-dynamic": "~9.0.6",
         "@angular/router": "~9.0.6",
-        "ng-password-validator": "0.0.6",
+        "bootstrap": "^4.5.3",
+        "ng-password-validator": "0.0.7",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
