--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-password-validator",
-    "version": "0.0.7",
+    "version": "1.0.0",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -15,7 +15,7 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "~9.0.6",
+        "@angular/animations": "^9.0.7",
         "@angular/common": "~9.0.6",
         "@angular/compiler": "~9.0.6",
         "@angular/core": "~9.0.6",
@@ -24,7 +24,8 @@
         "@angular/platform-browser-dynamic": "~9.0.6",
         "@angular/router": "~9.0.6",
         "bootstrap": "^4.5.3",
-        "ng-password-validator": "0.0.7",
+        "ng-password-validator": "1.0.0",
+        "ngx-toastr": "^13.2.0",
         "rxjs": "~6.5.4",
         "tslib": "^1.10.0",
         "zone.js": "~0.10.2"
