--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ngx-password-validator",
-    "version": "1.2.2",
+    "version": "1.3.0",
     "scripts": {
         "ng": "ng",
         "start": "ng serve",
@@ -8,6 +8,7 @@
         "test": "ng test",
         "lint": "ng lint",
         "e2e": "ng e2e",
+        "dev": "ng build ng-password-validator && cd dist/ng-password-validator/ && npm link",
         "build_lib": "ng build ng-password-validator --prod",
         "npm_pack": "cd dist/ng-password-validator && npm pack",
         "package": "npm run build_lib --prod && npm run npm_pack",
